[package]
name = "rbase"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/WorksButNotTested/rbase.git"
authors = [ "WorksButNotTested" ]

[package.metadata.wix]
upgrade-guid = "920EEC5B-D26F-452C-A791-D3422BEA91D1"
path-guid = "850A57FF-CA20-4118-8984-C75D3445B262"
license = false
eula = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
memmap2 = "0.9.4"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.10.4"
